chore: change keys in .env.test

--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,4 @@
-TEST_API_KEY=hjshnk5ex5u34565AWS654/JKGjhz545d89sjkja # RANDOM INEXISTENT API KEY
-PASSWORD=admin123 # INEXISTENT PASSWORD
+AWS_ACCESS_KEY_ID=AKIAIOSFODNN7EXAMPLE  # TEST
+AWS_SECRET_ACCESS_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY  # TEST
+GITHUB_TOKEN=ghp_1234567890abcdefghijklmnopqrstuvwxyz12  # TEST
+SLACK_TOKEN=xoxb-123456789012-123456789012-abcdefghijklmnopqrstuvwx  # TEST
